--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: mocanxi Blog
 SEOTitle: mocanxi的博客 | mocanxi Blog
 header-img: img/home-bg.jpg
 email: xiaochangshaoxu@gmail.com
-description: "这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
+description: "这里是 @mocanxi 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
 keyword: "mocanxi, mocanxi的博客, mocanxi Blog, 博客, 个人网站, 互联网, Go, 后端"
-url: "https://huangxuan.me" # your host, for absolute URL
+url: "https://ihry.top" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
@@ -75,7 +75,7 @@ ga_domain: ihry.top
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "要做一个有 swag 的程序员 <br> React Team @ Meta"
-sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: img/xiaohei.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
