--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: xiaochangshaoxu@gmail.com
 description: "这里是 @mocanxi 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
 keyword: "mocanxi, mocanxi的博客, mocanxi Blog, 博客, 个人网站, 互联网, Go, 后端"
 url: "https://ihry.top" # your host, for absolute URL
-baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "https://ihry.top" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
 future: true
@@ -17,7 +17,7 @@ weibo_username: false
 zhihu_username: false
 github_username: mocanxi
 twitter_username: false
-#facebook_username:  huxpro
+#facebook_username:  false
 #linkedin_username:  firstname-lastname-idxxxx
 
 # Build settings
