--- a/_config.yml
+++ b/_config.yml
@@ -74,8 +74,8 @@ ga_domain: ihry.top
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "要做一个有 swag 的程序员 <br> React Team @ Meta"
-sidebar-avatar: img/xiaohei.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "什么？"
+sidebar-avatar: /img/xiaohei.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
