--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ header-img: img/home-bg.png
 email: xiaochangshaoxu@gmail.com
 description: "这里是 @mocanxi 的个人博客"
 keyword: "mocanxi, mocanxi的博客, mocanxi Blog, 博客, 个人网站, 互联网, Go, 后端"
-url: "https://ihry.top" # your host, for absolute URL
-baseurl: "https://ihry.top" # for example, '/blog' if your blog hosted on 'host/blog'
+url: "https://blog2.ihry.top" # your host, for absolute URL
+baseurl: "https://blog2.ihry.top" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
 future: true
