--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: mocanxi Blog
-SEOTitle: mocanxi的博客 | mocanxi Blog
+SEOTitle: mocanxi的博客
 header-img: img/home-bg.png
 email: xiaochangshaoxu@gmail.com
 description: "这里是 @mocanxi 的个人博客"
